Padding top for callout-container reduced by 2% for better fitting and ensure text is not overlapping the brighter areas of the background picture

--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ body {
     align-items: center;
     justify-content: center;
     position: relative;
-    padding-top: 10%;
+    padding-top: 8%;
 }
 
 .opaque-overlay {
